<resources>

    <string name="app_name">LunchList</string>
    <string name="empty">No restaurants!</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lunch_list">LunchList</string>
    
    <!--  Form Strings -->
    <string name="name_label">Name: </string>
    <string name="address_label">Address: </string>
    <string name="type_label">Type: </string>
    <string name="notes_label">Notes: </string>
    <string name="location_label">Location: </string>
    
    <string name="type_take_out">Take Out</string>
    <string name="type_sit_down">Sit Down</string>
    <string name="type_delivery">Delivery</string>
    <string name="button_save">Save</string>
    <string name="default_location_value">Not set.</string>
    
    
    <string name="howto_add_rest">Click the MENU button to add a restaurant!</string>

</resources>