<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">
  <TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:shrinkColumns="1"
    >
    <TableRow>
      <TextView android:text="Name:" />
      <EditText android:id="@+id/name" />
    </TableRow>
    <TableRow>
      <TextView android:text="Address:" />
      <EditText android:id="@+id/addr" />
    </TableRow>
    <TableRow>
      <TextView android:text="Type:" />
      <RadioGroup android:id="@+id/types">
        <RadioButton android:id="@+id/take_out"
          android:text="@string/type_take_out"
          android:checked="true"
        />
        <RadioButton android:id="@+id/sit_down"
          android:text="@string/type_sit_down"
        />
        <RadioButton android:id="@+id/delivery"
          android:text="@string/type_delivery"
        />
      </RadioGroup>
    </TableRow>
    <TableRow>
      <TextView android:text="@string/notes_label" />
      <EditText android:id="@+id/notes"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:lines="2"
        android:scrollHorizontally="false"
        android:maxLines="2"
      />
    </TableRow>
    <Button android:id="@+id/save"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_save"
    />
  </TableLayout>
</ScrollView>